backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: k8s-test-task
spec:
  selector:
    app: backend 
  ports:
    - name: http
      protocol: TCP
      port: 8080 
      targetPort: 8080 
  type: ClusterIP
