frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: k8s-test-task
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000 
      targetPort: 3000 
  type: ClusterIP
